# geckoterminal-py

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: async_client_usage.ipynb  gecko-test.ipynb
geckoterminal_py/: __init__.py  base_client.py  client.py  constants.py
geckoterminal_py/clients/: async_client.py  sync_client.py
tests/: test_gecko_terminal_async_client.py  test_gecko_terminal_sync_client.py  test_geckoterminal_py_client.py  utils.py
tests/test_data/: get_dexes_by_network.json  get_networks.json  get_new_pools_all_networks.json  get_new_pools_by_network.json  get_ohlcv.json  get_simple_token_price.json  get_top_pools_by_network.json  get_top_pools_by_network_dex.json  get_top_pools_by_network_token.json
