[tool.poetry]
name = "geckoterminal-py"
version = "0.1.0"
description = ""
authors = ["cardosofede <federico.cardoso.e@gmail.com>"]
readme = "README.md"
packages = [{include = "geckoterminal_py"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.0.277"
pre-commit = "^3.3.3"
isort = "^5.12.0"

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 79
src = ["src"]

[tool.ruff.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
