[tool.poetry]
name = "geckoterminal-py"
version = "0.2.0"
description = ""
authors = ["cardosofede <federico.cardoso.e@gmail.com>"]
readme = "README.md"
packages = [{include = "geckoterminal_py"}]

[tool.poetry.dependencies]
python = "^3.10"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
aioresponses = "^0.7.4"
glom = "^23.3.0"
pandas = "^2.0.3"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
coverage = "^7.2.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
pre-commit = "^3.3.3"
isort = "^5.12.0"
jupyter = "^1.0.0"

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 100
src = ["src"]

[tool.ruff.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
